Politik Analysen hinzugefügt

--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -443,3 +443,23 @@ note = {Zugegriffen am: 21.11.2020},
 url = {https://www.computerwoche.de/a/praktische-anwendung-von-predictive-analytics,3093386},
 language = {ngerman}
 }
+
+@article{Matter,
+author = {Matter, Ulrich},
+title = {Big Public Data aus dem Programmable Web: Chancen und Herausforderungen},
+journal = {HMD Praxis der Wirtschaftsinformatik},
+volume = {56},
+pages = {1068-1081},
+year = {2019},
+issn = {2198-2775},
+language = {ngerman}
+}
+
+@article{Falck,
+author = {Falck, Fabian and Marstaller, Julian and Stoehr, Niklas and Maucher, Sören and Ren, Jeana and Thalhammer, Andreas and Rettinger, Achim and Studer, Rudi},
+title = {Measuring Proximity Between Newspapers and Political Parties: The Sentiment Political Compass},
+journal = {Policy \& Internet},
+year = {2019},
+issn = {1944-2866},
+language = {english}
+}
