--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -219,10 +219,21 @@ zu dem Schluss, dass es schwer zu beurteilen ist, ob die Anwendung zu einer Verm
 Wohnungseinbrüchen geführt hat, und dass das Werkzeug wahrscheinlich nur zu einer moderaten Kriminalitätsminderung
 beigetragen hat (vgl. \cite{Gerstner}, S.~85).  
 
-\subsection{Wahlen und Parteiarbeit}
+\subsection{Wahlen und Politik}
 
 Neben den in Abschnitt~\xcom erwähnten Text Mining Anwendungen zur Verbesserung der Serviceleistungen
-von Behörden existieren noch weitere \glqq{experimentelle}\grqq{} Anwendungen. 
+von Behörden existieren noch weitere \glqq{experimentelle}\grqq{} Anwendungen. So konnte Matter durch
+die Analyse teilstrukturierter Internetdokumente herausfinden, wie stark öffentliche Ämter in den USA
+mit religiösen Personen besetzt sind (vgl. \cite{Matter}). Der \glqq{Bible Belt}\grqq{}\footnote{
+Der \glqq{Bible Belt} ist eine besonders religiöse Region der USA, die sich über mehrere Bundesstaaten erstreckt.
+} und der Mormonenstaat Utah waren deutlich als relgiös konservative Staaten erkennbar (vgl. \cite{Matter}, S.~1078).
+Weiterhin konnten Falck und Andere die weltanschauliche Nähe von Zeitungen zu politischen Parteien und einzelnen Politikern
+darstellen, indem sie die Stimmungen der Zeitschriften bezüglich den jeweiligen Personen und Parteien analysierten
+(\emph{sentiment analysis}; vgl. \cite{Falck}, S.~4). Somit können mit Hilfe von Text Mining die weltanschaulichen Präferenzen
+von Personen und Organisationen bestimmt werden. Allerdings ist der praktische Nutzen solcher Analysen (noch) nicht klar.
+Personen, die sich mit Politik beschäftigen, können solche weltanschaulichen Differenzen mit Hilfe ihrer Erfahrung relativ
+schnell einschätzen. Die Personen, die solche Informationen also brauchen, haben diese bereits.
+
 
 
 Ein bekannteres (und umstritteneres) Beispiel für die Anwendung von Datenanalysen
