Clinton Wahlkampf hinzugefügt

--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -313,7 +313,7 @@ language = {english}
 }
 
 @misc{GJP_Ink_F,
-title = {Public SuperforecastsForecasts from Good Judgment's Professional Superforecasters},
+title = {{Public Superforecasts - Forecasts from Good Judgment's Professional Superforecasters}},
 howpublished = {Good Judgment Inc.},
 note = {Accessed: 16.11.2020},
 url = {https://goodjudgment.io/superforecasts/#1430},
@@ -461,5 +461,15 @@ title = {Measuring Proximity Between Newspapers and Political Parties: The Senti
 journal = {Policy \& Internet},
 year = {2019},
 issn = {1944-2866},
+language = {english}
+}
+
+@misc{Goldmacher,
+title = {Hillary Clinton’s ‘Invisible Guiding Hand’},
+author = {Goldmacher, Shane},
+howpublished = {Politico Magazine},
+year = {2016},
+note = {Zugegriffen am: 21.11.2020},
+url = {https://www.politico.com/magazine/story/2016/09/hillary-clinton-data-campaign-elan-kriegel-214215},
 language = {english}
 }
