--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -199,7 +199,7 @@ Die Evaluation beeinflusst die Schritte (1)-(5) (vgl. \cite{Bode}, S.~3).
 Bereits im RAND Bericht von 2013 wurde betont, dass Computer nicht von alleine die Probleme
 lösen können. Es braucht viel Arbeit und Korrektureingriffe von Menschen (vgl. \cite{Perry}, S.~117-118). 
 Dies ist sowohl auf datenanalytischer Ebene der Fall, als auch auf der sozialen Ebene, auf der
-viel \glqq{Feldarbeit}\grqq{} notwendig ist, um das Wissen über konkrete Kriminalitätsumgebung auf dem
+\glqq{Feldarbeit}\grqq{} notwendig ist, um das Wissen über die konkrete Kriminalitätsumgebung auf dem
 neuesten Stand zu halten. 
 
 Das Fazit von Predictive Policing in Deutschland ist bisher gemischt. Es gibt Berichte über hohe
@@ -228,13 +228,17 @@ mit religiösen Personen besetzt sind (vgl. \cite{Matter}). Der \glqq{Bible Belt
 Der \glqq{Bible Belt} ist eine besonders religiöse Region der USA, die sich über mehrere Bundesstaaten erstreckt.
 } und der Mormonenstaat Utah waren deutlich als relgiös konservative Staaten erkennbar (vgl. \cite{Matter}, S.~1078).
 Weiterhin konnten Falck und Andere die weltanschauliche Nähe von Zeitungen zu politischen Parteien und einzelnen Politikern
-darstellen, indem sie die Stimmungen der Zeitschriften bezüglich den jeweiligen Personen und Parteien analysierten
+darstellen, indem sie die Einstellungen der Zeitschriften zu den jeweiligen Personen und Parteien analysierten
 (\emph{sentiment analysis}; vgl. \cite{Falck}, S.~4). Somit können mit Hilfe von Text Mining die weltanschaulichen Präferenzen
 von Personen und Organisationen bestimmt werden. Allerdings ist der praktische Nutzen solcher Analysen (noch) nicht klar.
 Personen, die sich mit Politik beschäftigen, können solche weltanschaulichen Differenzen mit Hilfe ihrer Erfahrung relativ
-schnell einschätzen. Die Personen, die solche Informationen also brauchen, haben diese bereits.
+schnell einschätzen.
 
-
+In den USA werden Datenanalysen bei Wahlkämpfen verwendet. So waren im Wahlkampfteam von
+Hillary Clinton im Jahr 2016 mehr als 60 Mathematiker und Datenanalysten beschäftigt (vgl. \cite{Goldmacher}). 
+Die Modelle, die sie anwenden, dienen unter anderem dazu, \glqq{Wackelkandidaten}\grqq{} unter Delegierten zu identifizieren,
+um die verfügbaren Ressourcen an Wahlwerbung auf sie zu fokusieren (vgl. \cite{Goldmacher}). Allerdings hat Donald Trump bei der damaligen Wahl
+fast nichts in Datenanalysen investiert (vgl. \cite{Goldmacher}) und trotzdem gewonnen.
 
 Ein bekannteres (und umstritteneres) Beispiel für die Anwendung von Datenanalysen
 für politische und wahlkampftaktische Ziele ist der Fall von Cambridge Analytica.
