--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -27,7 +27,7 @@ Grundsätzlich könnten die Daten auch für Predictive Analytics Zwecke genutzt 
 Allerdings hat eine stichprobenartige Untersuchung ergeben, dass es sich bei vielen Daten
 nicht mehr um \glqq{Rohdaten}\grqq{} handelt, sondern um eine aufbereitete Fassung, die sich
 für die visuelle Präsentation eignet. Für Datenanalysen wären jedoch die Rohdaten besser geeignet.
-Weiterhin scheinen manche Behörden im Vergleich zu Anderen viele Daten an das Portal zu übergeben,
+Weiterhin scheinen manche Behörden im Vergleich zu anderen viele Daten an das Portal zu übergeben,
 sodass die Auswahl dann unausgeglichen wirkt. Zudem gibt es die Kritik, dass viele relevante
 Datensätze nicht veröffentlicht werden (vgl. \cite{Krempl}).
 
@@ -227,7 +227,7 @@ die Analyse teilstrukturierter Internetdokumente herausfinden, wie stark öffent
 mit religiösen Personen besetzt sind (vgl. \cite{Matter}). Der \glqq{Bible Belt}\grqq{}\footnote{
 Der \glqq{Bible Belt} ist eine besonders religiöse Region der USA, die sich über mehrere Bundesstaaten erstreckt.
 } und der Mormonenstaat Utah waren deutlich als relgiös konservative Staaten erkennbar (vgl. \cite{Matter}, S.~1078).
-Weiterhin konnten Falck und Andere die weltanschauliche Nähe von Zeitungen zu politischen Parteien und einzelnen Politikern
+Weiterhin konnten Falck et al. die weltanschauliche Nähe von Zeitungen zu politischen Parteien und einzelnen Politikern
 darstellen, indem sie die Einstellungen der Zeitschriften zu den jeweiligen Personen und Parteien analysierten
 (\emph{sentiment analysis}; vgl. \cite{Falck}, S.~4). Somit können mit Hilfe von Text Mining die weltanschaulichen Präferenzen
 von Personen und Organisationen bestimmt werden. Allerdings ist der praktische Nutzen solcher Analysen (noch) nicht klar.
