--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -31,22 +31,11 @@ Weiterhin scheinen manche Behörden im Vergleich zu anderen viele Daten an das P
 sodass die Auswahl dann unausgeglichen wirkt. Zudem gibt es die Kritik, dass viele relevante
 Datensätze nicht veröffentlicht werden (vgl. \cite{Krempl}).
 
-Insgesamt ist aus der stichprobenartigen Untersuchung der Datensätze auf GovData.de nicht unmittelbar
-hervorgegangen, wie die Daten für Predictive Analytics Anwendungen sinnvoll eingesetzt werden könnten. 
-
-
-% TODO
-% Daten in der öffentlichen Verwaltung
-
-% Abgrenzung zu 'Nowcasting'
-% Predictive Policing
-% Einschätzung der politischen Stimmungslage
-% Vorhersage kultureller Unterschiede
-
-% wackeligste Stimmen identifizieren und sie bei der Wahlwerbung zu priorisieren
-
 % TODO Daten (-> Heise) 
 % Thapa_Parycek S. 46
+
+Insgesamt ist aus der stichprobenartigen Untersuchung der Datensätze auf GovData.de nicht unmittelbar
+hervorgegangen, wie die Daten für Predictive Analytics Anwendungen sinnvoll eingesetzt werden könnten. 
 
 \subsection{Predictive Analytics in der Steuerverwaltung}
 
@@ -254,18 +243,36 @@ für politische und wahlkampftaktische Ziele ist der Fall von Cambridge Analytic
 
 \section{Gesundheit}
 
+Schon seit etwa 100 Jahren können statistische Methoden von Wissenschaftlern
+genutzt werden, um Gefahren für die öffentliche Gesundheit zu untersuchen.
+
+% TODO siehe Proctor
+
 Diese Haltung war überraschend genug, um eine Nachfrage des Journalisten
 auszulösen.
 
+
+Das Thema Datenschutz bestimmt in Deutschland die Diskussion von Datenanalysen
+im Gesundheitssektor.
+
 % TODO
 % Google Flu Trends (vorerst gescheitert)
-% Kohortenstudien nützlich bei: bsp. Kampagnen zur öffentlichen Gesundheit
-%   bsp. Ernährungskampagnen, Anti-Rauch-Kampagnen 
+
 % Kohortenstudien: nicht persönlich (s. Watson, Abschnitt Cohort treatment),
 %   aber Sicherheitsbedenken bleiben (Anonymisierung nicht möglich, Sicherheits
 %   risiken ...)
+
 \subsection{Flint Trinkwasserskandal - Fallstudie}
 
 \section{Bildung}
+Abschließend sollen noch die Anwendungsmöglichkeiten von Predictive Analytics
+im Bildungssektor kurz skizziert werden.
 
-% Anwendungsbeispiel Decision Tree
+E$^2$
+
+% Universitiy of Michigan E^2 Coach (Mattingly S. 242-243) 
+
+Insgesamt scheint der Bildungssektor bisher am wenigsten von
+Predictive Analytics Anwendungen profitiert zu haben.
+
+% konkreteres Anwendungsbeispiel Decision Tree
