--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -125,9 +125,6 @@ Analysemodelle im geschäftlichen Kontext erstellen (vgl. \cite{McCarthy}, S.~6)
 Predictive Analytics und Data Mining werden dann als Bestandteil von Business Analytics
 gesehen. 
 
-% TODO
-% Data Mining Betonung von Big Data, 3 Vs
-
 Business Intelligence ist ein zu Business Analytics ähnlicher
 Begriff und steht allgemein für Anwendungen und Techniken, die im
 Geschäftsumfeld zur Entscheidungsunterstützung und zur Generierung von
@@ -961,7 +958,7 @@ Nachbearbeitung & Interpretation der Ergebnisse \\
 
 \begin{figure}%[!hbt]
 \centering
-\caption{\emph{Predictive analytics} Methoden aus der Anwenderperspektive.}
+\caption{Predictive Analytics Methoden aus der Anwenderperspektive.}
 \includegraphics[scale=1.0]{Grafiken/PA_Methoden_Ink.pdf} 
 \label{pic:PA_Methoden}
 \end{figure}
@@ -970,7 +967,6 @@ Nachbearbeitung & Interpretation der Ergebnisse \\
 % Beschreibung / Visualisierung der Daten
 % 
 \subsubsection{Beschreibung der Daten}
-
 % Korrelationsanalyse
 
 Neben der Berechnung der Korrelation gibt es noch eine Reihe weiterer, spezieller
@@ -983,6 +979,19 @@ typischen Faktoren waren dann die Art des Düngemittels, die Pflanzengattung ode
 die Art der Bewässerung, während der Ertrag die abhängige Variable darstellte
 (vgl. \cite{Bijma}, S.~275).
 } (vgl. \cite{Bijma}, S.~275-276).
+
+
+\subsubsection{Datenvisualisierung}
+
+Es stehen eine Vielzahl von Methoden zur Verfügung, um Daten zu visualiseren.
+Die geläufigen Balken- und Kreisdiagramme bilden nur einen kleinen Teil der
+Möglichkeiten ab, die dem Datenanalysten zur Verfügung stehen um Daten zu
+visualisieren.
+
+% TODO menschliches Gehirn gut in Mustererkennung
+
+Datenvisualisierungen werden auch verwendet, um die Ergebnisse von Datenanalysen
+zu präsentieren und zu vermitteln. 
 
 \subsubsection{Die Großen Drei}
 
@@ -1071,30 +1080,30 @@ in der Zukunft nicht genügend Handlungsoptionen zur Verfügung stehen.
 
 Sowohl Predictive Analytics als auch Forecasting sind evidenzbasierte Methoden,
 die die Möglichkeit bieten, das menschliche Urteilsvermögen zu verbessern. Dies
-kann dabei helfen, die Qualität von Entscheidungen zu verbessern.
+kann dabei helfen, die Qualität von Entscheidungen zu heben.
 
 Dabei eignet sich Forecasting besser für strategische und taktische Entscheidungen,
-da auf operativer Ebene mehr Erfahrungswerte vorliegen, was den Nutzen von
+da auf operativer Ebene mehr Erfahrungswerte vorliegen, was die Nutzung von
 Predictive Analytics ermöglicht. Forecasting hat allerdings den Vorteil, dass
 keine strukturierten Daten gesammelt werden müssen. Forecaster analysieren unstrukturierte
-Dokumente und erstellen sich auf dieser Basis einfache Modelle (siehe S.~\xcom).
+Dokumente und erstellen auf dieser Basis einfache Modelle (siehe S.~\xcom).
 Dies ist insbesondere dann die einzige Alternative, wenn keine oder nur sehr wenige
 Daten vorliegen.
 
 Forecasting kann prinizipiell von einer Person mit einem Taschenrechner praktiziert
 werden. Die Methoden sind leichter zu verstehen und es werden nur wenige Formeln benötigt.
-Predictive Analytics wird hingegen typischerweise von ausgebildeten Spezialisten in Fächern wie
-Mathematik, Statistik oder Informatik praktiziert (\cite{Gluchowski}, S.~107).
+Predictive Analytics wird hingegen typischerweise von Spezialisten praktiziert, 
+die in Fächern wie Mathematik, Statistik oder Informatik ausgebildet sind (\cite{Gluchowski}, S.~107).
 
 Predictive Analytics ist teuer. Es benötigt teures Personal, Anwendungen (vgl. \cite{Iffert}, S.~22) und eine
 Dateninfrastruktur. Dafür kann Predictive Analytics bei der
 Genauigkeit der Vorhersagen die besten menschlichen Forecaster schlagen (siehe Abbildung~\xcom in Abschnitt~\xcom).
-% short term predictions are possible and reasonably accurate (s. unclouded vision)
-% like weather forecasts
+Allerdings ist das weniger aufwendige Forecasting, wie eine Wettervorhersage, bei Kurzzeitprognosen ausreichend genau
+(vgl. \cite{Economist}).
 
-% TODO
-
-% Reaktionszeit Forecaster: Tage bis Wochen, PA: Monate bis Jahre.
+Außerdem liegt aufgrund der aufwendigen Beschaffung, Deutung und Verarbeitung von Daten die Reaktionszeit von
+Predictive Analytics auf neue Entwicklungen in einem Zeitrahmen von Monaten bis Jahren. Ein menschlicher Forecaster
+ist dagegen flexibler und benötigt schätzungsweise nur einen Zeitrahmen von Tagen bis Wochen.
 
 Der Nutzen erkenntnisbasierter Methoden ist universell. Somit könnten viele profitieren,
 falls diese Methoden sich weit verbreiten würden. Allerdings werden nur wenige Personen
@@ -1118,7 +1127,7 @@ Anhang~\xcom).
 
 \item[(3) Forecasting praktizieren:] \hfill \\
 Forecasting zu praktizieren, bedeutet subjektive Wahrscheinlichkeiten in Zahlen auszudrücken
-und mit Hilfe des Brier Score die Genauigkeit der Vorhersagen prüfen (siehe Anhang~\xcom). Ferner muss
+und mit Hilfe des Brier Score die Genauigkeit der Vorhersagen zu prüfen (siehe Anhang~\xcom). Ferner müssen
 das Belief Updating nach der Formel von Bayes und die Einhaltung der weiteren Formeln aus der Wahrscheinlichkeitstheorie
 quantitativ überprüft werden (siehe Anhang~\xcom).
 
