Fallstudie E-Coach hinzugefügt

--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -2,8 +2,8 @@
 
 Zum Schluss werden einige Anwendungen von Predictive Analytics im öffentlichen
 Sektor vorgestellt. Es wurden Anwendungsfälle in den Bereichen öffentliche Verwaltung,
-Gesundheit und Bildung betrachtet. Zudem wurden zwei Fallstudien erstellt, bei denen
-zwei konkrete Anwendungen besonders ausführlich untersucht wurden.
+Gesundheit und Bildung betrachtet. Zudem wurden Fallstudien erstellt, bei denen
+konkrete Anwendungen im Fokus stehen.
 
 % TODO
 % 2 grundlegende Probleme
@@ -268,9 +268,24 @@ im Gesundheitssektor.
 Abschließend sollen noch die Anwendungsmöglichkeiten von Predictive Analytics
 im Bildungssektor kurz skizziert werden.
 
-E$^2$
+Eine weitere konkrete Anwendung ist E$^2$Coach, ein System zur Studienunterstützung.
 
-% Universitiy of Michigan E^2 Coach (Mattingly S. 242-243) 
+\subsection{University of Michigan E$^2$Coach - Fallstudie}
+
+E$^2$Coach wurde an der Universität von Michigan entwickelt (vgl. \cite{Mattingly}, S.~242).
+Der Zweck der Einführung von E$^2$Coach war eine Verringerung der Abbrecherquoten in den
+MINT-Fächern zu erreichen. Als historische Daten dienten dabei die Studienverlaufsdaten von
+49 000 Studienanfängern im Fach Physik. Aus diesen Daten wurde ein Modell generiert.
+Risikostudenten können mit Hilfe dieses Modells identifiziert werden, indem ihre Daten in das
+System eingegeben werden. Dabei liefern Tutoren, Physikprofessoren und die Studenten selbst
+die individuellen Daten der Studenten.
+
+Um Feedback für die Studenten zu ermöglichen, agiert E$^2$Coach als Schnittstelle zwischen
+den Studenten und den Ressourcen, die ihnen zur Verfügung stehen (z. B. Online Lernmaterial) (vgl. \cite{Mattingly}, S.~242).
+So bietet das System den Studenten Fortschrittsanzeigen, Vorschläge für Lernmethoden und Ermutigungen.
+Zudem gibt es menschliche Berater, die mit den Studenten über eine Online-Plattform kommunizieren können.
+Bei den Beratern handelt es sich um Tutoren, die bereits einen Studienabschluss besitzen und die auf Basis
+gemeinsamer Ziele und Interessen den zu beratenden Studenten zugewiesen werden.
 
 Insgesamt scheint der Bildungssektor bisher am wenigsten von
 Predictive Analytics Anwendungen profitiert zu haben.
