--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -473,3 +473,15 @@ note = {Zugegriffen am: 21.11.2020},
 url = {https://www.politico.com/magazine/story/2016/09/hillary-clinton-data-campaign-elan-kriegel-214215},
 language = {english}
 }
+
+@article{Mattingly,
+author = {Mattingly, Karen and Rice, Margaret and Berge, Zane},
+title = {Learning analytics as a tool for closing the assessment loop in higher education},
+journal = {{Knowledge Management \& E-learning}},
+volume = {4},
+number = {3},
+pages = {236-247},
+year = {2012},
+issn = {2073-7904},
+language = {english}
+}
