--- a/Text/Arbeit/Inhalt/Titelseite.tex
+++ b/Text/Arbeit/Inhalt/Titelseite.tex
@@ -46,9 +46,11 @@
 
 \vspace{2cm}
 \begin{center}
+
+
 	\large
 	%\the\month\,/\,\the\year
-  \today
+Eingereicht am \today
 \end{center}
 
 \vspace{2cm}
