--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -226,7 +226,7 @@ schnell einschätzen.
 In den USA werden Datenanalysen bei Wahlkämpfen verwendet. So waren im Wahlkampfteam von
 Hillary Clinton im Jahr 2016 mehr als 60 Mathematiker und Datenanalysten beschäftigt (vgl. \cite{Goldmacher}). 
 Die Modelle, die sie anwenden, dienen unter anderem dazu, \glqq{Wackelkandidaten}\grqq{} unter Delegierten zu identifizieren,
-um die verfügbaren Ressourcen an Wahlwerbung auf sie zu fokusieren (vgl. \cite{Goldmacher}). Allerdings hat Donald Trump bei der damaligen Wahl
+um die verfügbaren Ressourcen an Wahlwerbung auf sie zu fokussieren (vgl. \cite{Goldmacher}). Allerdings hat Donald Trump bei der damaligen Wahl
 fast nichts in Datenanalysen investiert (vgl. \cite{Goldmacher}) und trotzdem gewonnen.
 
 Ein bekannteres (und umstritteneres) Beispiel für die Anwendung von Datenanalysen
@@ -240,6 +240,27 @@ für politische und wahlkampftaktische Ziele ist der Fall von Cambridge Analytic
 \includegraphics[scale=1.0]{Grafiken/Facebook_Likes_Ink.pdf} 
 \label{pic:Like_Matrix}
 \end{figure}
+
+
+Christliche Vereinigungen in den USA nutzen ähnliche Methoden, mit dem Ziel neue Mitglieder für die Kirche
+zu gewinnen (vgl. \cite{Viken}, Minuten 13-19). So ist beispielsweise \emph{Gloo} eine christliche Softwarefirma,
+die sich auf die Verknüpfung von Datenbanken spezialisiert hat. Gloo vermarktet seine Mikrotargeting Plattform
+\emph{Insights} an Kirchen, wobei auch Daten der Kirchenmitglieder erfasst werden. Ein Werbespot für Insights
+wirbt damit, ihren Kunden eine \glqq{Rundumansicht ihrer Zielgruppe in einer geschützten Datenbank mit mehr als 
+2200 Datenpunkten zu nahezu jedem US Verbraucher}\grqq{} (siehe \cite{Viken}) zu bieten. Matt Engel, ein Gloo
+Mitarbeiter, meint dass Gloo die größte Datenplattform mit missionarischem Ziel weltweit aufgebaut habe (vgl. \cite{Viken}).
+
+Ein Geldgeber und Untestützer von Gloo beschreibt in einem Szenario, wie die Methode von Insights funktioniert (vgl. \cite{Viken}).
+Die Anwendung identifiziert eine Zielgruppe von etwa 5 000 bis 10 000 Personen in einem Umkreis von etwa 15~km um eine Kirche.
+Aus den Daten zu den Einkäufen der Personen kann geschlossen werden, ob manche Paare vielleicht Eheprobleme haben.
+Diese Personen werden dann ausgewählt und die Anwendung hilft der Gemeinde, Kontakt mit ihnen über Facebook herzustellen.
+Von der Kirche werden dann gezielt Einladungen zu Treffen, wie beispielsweise Abendveranstaltungen, verschickt. Wenn das Ehepaar
+Kinder hat, werden sie während der Veranstaltung kostenlos betreut. Die neuen Kirchenbesucher können dann Kontakte mit
+Mitgliedern aus der Kirchengemeinde knüpfen und möglicherweise selbst beitreten oder sich in Zukunft stärker engagieren.
+Wie bereits oben erwähnt, dient die Methode also dazu, alte Mitglieder zu halten und neue für die Kirche zu gewinnen,
+und somit die Kirchengemeinde zu vergrößern.
+
+Einschätzungen dazu, wie effektiv das christliche Mikrotargeting funktioniert, wurden allerdings nicht gegeben.
 
 \section{Gesundheit}
 
@@ -286,6 +307,9 @@ So bietet das System den Studenten Fortschrittsanzeigen, Vorschläge für Lernme
 Zudem gibt es menschliche Berater, die mit den Studenten über eine Online-Plattform kommunizieren können.
 Bei den Beratern handelt es sich um Tutoren, die bereits einen Studienabschluss besitzen und die auf Basis
 gemeinsamer Ziele und Interessen den zu beratenden Studenten zugewiesen werden.
+
+Anwendungen wie E$^2$Coach, wären womöglich auch in Deutschland denkbar, falls die Nutzung personenbezogener
+Daten auf Freiwilligkeit basiert.
 
 Insgesamt scheint der Bildungssektor bisher am wenigsten von
 Predictive Analytics Anwendungen profitiert zu haben.
