--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -993,7 +993,8 @@ visualisieren.
 Datenvisualisierungen werden auch verwendet, um die Ergebnisse von Datenanalysen
 zu präsentieren und zu vermitteln. 
 
-\subsubsection{Die Großen Drei}
+\subsubsection{Vorhersagemodelle}
+% TODO Die Großen Drei
 
 \paragraph{Regression}
 
