--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -241,6 +241,39 @@ für politische und wahlkampftaktische Ziele ist der Fall von Cambridge Analytic
 \label{pic:Like_Matrix}
 \end{figure}
 
+Den Grundstein für die Tätigkeit von \emph{Cambridge Analytica} hat ein Artikel
+von Forschern der Cambridge Universität gelegt\footnote{
+Genauer: Forscher vom \emph{Psychometrics Centre} in Cambridge
+} (\cite{Kosinski}). Diese haben Persönlichkeitsmerkmale und Eigenschaften von
+Personen vorhergesagt, indem sie die Nutzung von \emph{Facebook Likes} analysierten.
+Abbildung~\ref{pic:Like_Matrix} veranschaulicht dieses Vorgehen\footnote{
+Für die Orignalgrafik siehe \cite{Kosinski}, S.~5803.
+}. Die Facebook Likes (Variablen) von tausenden Nutzern wurden mit Hilfe einer Methode zur
+Variablenreduktion\footnote{
+Die Singulärwertzerlegung ist eine Methode, die ähnlich zur Principal Component Analysis ist.
+} auf 100 Komponenten verkleinert. Diese Komponenten dienten anschließend als Prädiktorvariablen
+für die Vorhersagemodelle. Das Alter wurde beispielsweise mit linearer Regression bestimmt.
+Die Modell konnte mit Hilfe der Informationen aus dem Facebook Profil, dem
+Profilbild und der Ergebnisse eines psychologischen Tests trainiert werden (Trainingsdatensatz).
+Das Ergebnis der Studie war, dass die Persönlichkeitsmerkmale und Attribute von Personen mit hoher
+Genauigkeit von den Modellen vorhergesagt werden konnten\footnote{
+Manche Attribute,wie z. B. das Alter, konnten genauer vorhergesagt werden als andere Merkmale, wie z. B. die Lebenszufriedenheit (vgl. \cite{Kosinski}, S.~5804)
+} (vgl. \cite{Kosinski}, S.~5804).
+
+Es wird vermutet, dass die Forscher aus Cambridge oder die Universität selbst sich geweigert haben, diese Nutzerdaten
+preiszugeben (vgl. \cite{Isaak}, S.~57). Eine andere Forschergruppe hat in Kooperation mit Cambridge Analytica die
+erforderlichen Daten mit Hilfe einer Umfrage von Facebook Nutzern gesammelt und dabei durch die Freigiebigkeit der Schnittstelle von
+Facebook auch gleich die Daten der Freunde der Befragten erhalten (vgl. \cite{Isaak}, S.~57).
+
+Das Ziel von Cambridge Analytica war es, mit dem Prognosemodell bestimmte Wählergruppen zu identifizieren (vgl. \cite{Isaak}, S.~57).
+Diese würden dann im Laufe von Wahlen gezielt Nachrichten erhalten (Mikrotargeting). Dabei sollten entweder Wähler davon abgehalten
+werden für den Konkurrenten zu stimmen, oder Wähler dazu verleitet werden für den gewünschten Kandidaten zu stimmen.
+
+Die Einschätzungen über die Effektivität solcher Mikrotargeting Methoden gehen weit auseinander. So schreibt Trump in einem
+Artikel der \emph{Washington Post} unter anderem, dass es sehr schwer sei mit Hilfe vom Mikrotargeting die politischen Ansichten
+einer Person zu beeinflussen (vgl. \cite{Trump}). Außerdem hätten andere Mikrotargeting Kampagnen in der Vergangenheit keinen
+eindeutigen Nutzen gezeigt. Andere Stimmen behaupten, dass die Arbeit von Cambridge Analytica einen nützlichen oder sogar
+kritischen Effekt auf den Wahlausgang von 2016 hatte (vgl. \cite{Isaak}, S.~58).
 
 Christliche Vereinigungen in den USA nutzen ähnliche Methoden, mit dem Ziel neue Mitglieder für die Kirche
 zu gewinnen (vgl. \cite{Viken}, Minuten 13-19). So ist beispielsweise \emph{Gloo} eine christliche Softwarefirma,
@@ -264,8 +297,15 @@ Einschätzungen dazu, wie effektiv das christliche Mikrotargeting funktioniert, 
 
 \section{Gesundheit}
 
+
+
 Schon seit etwa 100 Jahren können statistische Methoden von Wissenschaftlern
-genutzt werden, um Gefahren für die öffentliche Gesundheit zu untersuchen.
+genutzt werden, um Gefahren für die öffentliche Gesundheit zu untersuchen (vgl. \cite{Proctor}, ).
+
+Allerdings hat sich dadurch auch stellenweise das Phänomen der \glqq{Evidenzbeharrlichkeit}\grqq{} etabliert.
+Wissenschaftler beharren auf strenger Evidenz und ignorieren weniger starke Indizien, wodurch der Fortschritt
+blockiert wird.  
+
 
 % TODO siehe Proctor
 
