--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -485,3 +485,46 @@ year = {2012},
 issn = {2073-7904},
 language = {english}
 }
+
+@article {Kosinski,
+author = {Kosinski, Michal and Stillwell, David and Graepel, Thore},
+title = {Private traits and attributes are predictable from digital records of human behavior},
+volume = {110},
+number = {15},
+pages = {5802--5805},
+year = {2013},
+IGNORE_doi = {10.1073/pnas.1218772110},
+IGNORE_publisher = {National Academy of Sciences},
+IGNORE_abstract = {We show that easily accessible digital records of behavior, Facebook Likes, can be used to automatically and accurately predict a range of highly sensitive personal attributes including: sexual orientation, ethnicity, religious and political views, personality traits, intelligence, happiness, use of addictive substances, parental separation, age, and gender. The analysis presented is based on a dataset of over 58,000 volunteers who provided their Facebook Likes, detailed demographic profiles, and the results of several psychometric tests. The proposed model uses dimensionality reduction for preprocessing the Likes data, which are then entered into logistic/linear regression to predict individual psychodemographic profiles from Likes. The model correctly discriminates between homosexual and heterosexual men in 88\% of cases, African Americans and Caucasian Americans in 95\% of cases, and between Democrat and Republican in 85\% of cases. For the personality trait {\textquotedblleft}Openness,{\textquotedblright} prediction accuracy is close to the test{\textendash}retest accuracy of a standard personality test. We give examples of associations between attributes and Likes and discuss implications for online personalization and privacy.},
+issn = {0027-8424},
+IGNORE_URL = {https://www.pnas.org/content/110/15/5802},
+IGNORE_eprint = {https://www.pnas.org/content/110/15/5802.full.pdf},
+IGNORE_journal = {Proceedings of the National Academy of Sciences},
+language = {english}
+}
+
+@article{Isaak,
+author={Isaak, Jim and Hanna, Mina},
+journal={Computer}, 
+title={{User Data Privacy: Facebook, Cambridge Analytica, and Privacy Protection}}, 
+year={2018},
+volume={51},
+number={8},
+pages={56-59},
+IGNORE_abstract={With the revelation that Facebook handed over personally identifiable information of more than 87 million users to Cambridge Analytica, it is now imperative that comprehensive privacy policy laws be developed. Technologists, researchers, and innovators should meaningfully contribute to the development of these policies.},
+IGNORE_keywords={data privacy;social networking (online);Facebook;personally identifiable information;Cambridge Analytica;comprehensive privacy policy laws;user data privacy;privacy protection;technologists;researchers;innovators;data privacy;Facebook;Cambridge Analytica;user data privacy;privacy protection;The Policy Corner;Internet/Web technologies;security;online security;data security;privacy;cybercrime;social media;PII;personally identifiable information},
+IGNORE_doi={10.1109/MC.2018.3191268},
+ISSN={1558-0814},
+IGNORE_month={August},
+language = {english}
+}
+
+@misc{Trump,
+title = {Four and a half reasons not to worry that Cambridge Analytica skewed the 2016 election},
+author = {Trump, Kris-Stella},
+howpublished = {The Washington Post},
+year = {2018},
+note = {Zugegriffen am: 22.11.2020},
+url = {https://www.washingtonpost.com/news/monkey-cage/wp/2018/03/23/four-and-a-half-reasons-not-to-worry-that-cambridge-analytica-skewed-the-2016-election/},
+language = {english}
+}
