--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -299,12 +299,17 @@ Einschätzungen dazu, wie effektiv das christliche Mikrotargeting funktioniert, 
 
 
 
-Schon seit etwa 100 Jahren können statistische Methoden von Wissenschaftlern
-genutzt werden, um Gefahren für die öffentliche Gesundheit zu untersuchen (vgl. \cite{Proctor}, ).
+Schon seit dem letzten Jahrhundert können statistische Methoden von Wissenschaftlern
+genutzt werden, um Gefahren für die öffentliche Gesundheit zu untersuchen (vgl. \cite{Proctor}, S.~216).
 
-Allerdings hat sich dadurch auch stellenweise das Phänomen der \glqq{Evidenzbeharrlichkeit}\grqq{} etabliert.
-Wissenschaftler beharren auf strenger Evidenz und ignorieren weniger starke Indizien, wodurch der Fortschritt
-blockiert wird.  
+Allerdings hat sich dadurch auch das Phänomen der \glqq{Evidenzbeharrlichkeit}\grqq{} in der Epidemiologie etabliert
+(vgl. \cite{Proctor}, S.~112-113).
+Epidemiologen beharren auf strenger Evidenz und großen Fallzahlen (vgl. \cite{Proctor}, S.~112-113) und ignorieren weniger 
+starke Indizien, wodurch der Fortschritt manchmal blockiert wird. Dies war bei der Anerkennung der Gesundheitsgefahren
+von Asbest der Fall (vgl. \cite{Proctor}, S.~112-113). Im Jahr 1938 lag die Zahl der bekannten Krebserkankungen im Zusammenhang mit
+Asbest weltweit bei 6. Somit konnten Epidemiologen behaupten, dass die Fallzahl nicht reiche, um einen signifikanten Zusammenhang
+zwischen Asbest und Lungenkrebs herzustellen. Die Beweiskraft einer klinischen Studie, die den Zusammenhang hergestellt hat, indem sie
+zwei Einzelfälle untersucht hat, galt als zu schwach (vgl. \cite{Proctor}, S.~113).
 
 
 % TODO siehe Proctor
@@ -312,10 +317,15 @@ blockiert wird.
 Diese Haltung war überraschend genug, um eine Nachfrage des Journalisten
 auszulösen.
 
+\subsection{Datenschutzbedenken}
 
 Das Thema Datenschutz bestimmt in Deutschland die Diskussion von Datenanalysen
 im Gesundheitssektor.
 
+\subsection{Befundbilder - Fallstudie}
+
+
+\subsection{Seuchenerkennung mit AI}
 % TODO
 % Google Flu Trends (vorerst gescheitert)
 
