--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -174,14 +174,7 @@ citecolor=MidnightBlue }
 %-------------------------------------------------------------------------------
 
 % TODO echten Titel ersinnen
-\chapter{Zusammenfassung und Fazit}
-
-% Grad der Etablierung von Forecasting kann ein Indikator für eine mögliche erfolgreiche Adoption
-% von PA sein
-
-% TODO Interessantes
-% inwiefern lassen sich kognitive Verzerrungen vermeiden (s. Anhang für
-%   ein Paar Betrachtungen hierzu)
+\input{Inhalt/Fazit}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \appendix
