--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -528,3 +528,45 @@ note = {Zugegriffen am: 22.11.2020},
 url = {https://www.washingtonpost.com/news/monkey-cage/wp/2018/03/23/four-and-a-half-reasons-not-to-worry-that-cambridge-analytica-skewed-the-2016-election/},
 language = {english}
 }
+
+@misc{Jotten,
+title = {Epidemiologe: “Masken senken das relative Risiko einer Infektion um etwa 80 Prozent”},
+author = {Jötten, Frederik},
+howpublished = {Redaktionsnetzwerk Deutschland},
+year = {2020},
+note = {Zugegriffen am: 22.11.2020},
+url = {https://www.rnd.de/gesundheit/epidemiologe-masken-senken-das-relative-risiko-einer-infektion-um-etwa-80-prozent-CCVZYHAF3VCNLLUCLTR6KY7OGU.html},
+language = {ngerman}
+}
+
+@book{Jorzig,
+author = {Jorzig, Alexandra and Sarangi, Frank},
+title = {Digitalisierung im Gesundheitswesen},
+publisher = {Springer-Verlag},
+year = {2020},
+isbn = {978-3-662-58306-7},
+language = {ngerman}
+}
+
+@article{Weichert,
+author = {Weichert, Thilo},
+title = {{Big Data, Gesundheit und der Datenschutz}},
+journal = {{Datenschutz und Datensicherheit - DuD}},
+volume = {38},
+pages = {831-838},
+year = {2014},
+issn = {1862-2607},
+language = {ngerman}
+}
+
+@article{Moebus,
+author = {Moebus,Susanne and Kuhn,Joseph and Hoffmann,Wolfgang},
+title = {{Big Data und Public Health}},
+journal = {{Gesundheitswesen}},
+volume = {79},
+pages = {901-905},
+year = {2017},
+issn = {0941-3790},
+language = {ngerman}
+}
+
