--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -320,7 +320,7 @@ entsprachen (vgl. \cite{Jotten}). Somit wurde das Tragen von Masken anfangs nich
 Das Thema Datenschutz bestimmt in Deutschland die Diskussion von Datenanalysen
 im Gesundheitssektor (vgl. \cite{Jorzig}, S.~138-139 und \cite{Weichert}, S.~835-836 und \cite{Moebus}, S.~903). 
 Insbesondere der Grundsatz der Datensparsamkeit, wozu Datenvermeidung, Datenlöschung und das Prinzip der Nichtverkettbarkeit gehören,
-steht im Gegensatz zu den Bedürfnissen von des Big Data Konzepts, das durch Anhäufung und Verknüpfung vieler Daten Erkenntnisgewinne
+steht im Gegensatz zu den Bedürfnissen des Big Data Konzepts, das durch Anhäufung und Verknüpfung vieler Daten Erkenntnisgewinne
 sucht (vgl. \cite{Weichert}, S.~836). Aus diesem Grund müssen Gesundheitsdaten entweder annonymisiert oder pseudonymisiert werden:
 
 \begin{description}
@@ -346,23 +346,31 @@ Hierbei sei jedoch erwähnt, dass die Datenschutzgrundverordnung, Datenanalysen 
 (vgl. \cite{Jorzig}, S.~139). Dies wird als Forschungsprivileg bezeichnet. Allerdings sind müssen die oben genannten
 strengen Einschränkungen beachtet werden.
 
-\subsection{}
+\subsection{Predictive Analytics in der Radiologie}
 
+Das Fachgebiet der Radiologie nimmt im Bereich Datenanalysene eine Vorreiterstellung in Deutschland ein (vgl. \cite{Jorzig}, S.~111-112).
+Dabei muss die Radiologie als erste medizinische Fachrichtung den Kontakt mit den Behörden suchen, das der Einsatz
+dieser Systeme in Deutschland bisher nicht reguliert ist (vgl. \cite{Jorzig}, S.~112).
 
+Diese Sonderposition der Radiologie hängt unter anderem mit dem Problem von \glqq{Zufallsbefunden}\grqq{} zusammen.
+Wenn ein Radiologe sich eine Aufnahme eines Patienten ansieht und neben dem Hauptbefund (sein \glqq{Hauptziel}\grqq{})
+ein weiterer Befund (Nebenbefund) vorliegt, den der Radiologe nicht erkennt, so muss der Radiologe für diesen Fehler haften
+(vgl. \cite{Jorzig}, S.~112). Diesem Haftungsdruck ausgesetzt, muss die Radiologie sich modernisieren. Ein System,
+das Röntgen oder CT-Aufnahmen\footnote{Computertomographie Aufnahmen} analysieren und Befunde prognostizieren kann, kann
+bei jeder Kontrolle die Aufnahme auf Nebenbefunde untersuchen (vgl. \cite{Jorzig}, S.~112).
+Damit wird der Radiologe aus der Haftung genommen. Ein Beispiel für ein solches System ist
+PANTHER\footnote{Patientenorientierte onkologische Therapieassistenz} vom Fraunhofer Institute for Medical Image in Bremen.
+Das System wird mit CT-Bildern als Daten trainiert, wobei auf den Trainingsbildern Tumorgewebe und gutartiges Gewebe markiert sind
+(vgl. \cite{Jorzig}, S.~112).
 
-
-% Computertomographie 111-112
-Buch: \cite{Jorzig}
-
-Dud: \cite{Weichert}
-
-
+Am Beispiel der Radiologie lässt sich erkennen, wie ein Fachgebiet durch äußeren Druck (Haftungsklagen) zur Anwendung von Predictive
+Analytics gedrängt wird. Für den Radiologen können solche Systeme eine Gefahr für seine Arbeit darstellen, wenn sein Tätigkeitsbereich
+zunehmend automatisiert wird. Allerdings ändert der externe Druck die \glqq{Spielregeln}\grqq{} (siehe S~\xcom), sodass
+sich Predictive Analytics zunehmend etabliert.
 
 % TODO Missbrauch -> Proctor
-
-
-
 \subsection{Seuchenerkennung mit AI}
+
 % TODO
 % Google Flu Trends (vorerst gescheitert)
 
